--- a/dogs/pubspec.yaml
+++ b/dogs/pubspec.yaml
@@ -19,3 +19,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/
+  fonts:
+    - family: LeckerliOne
+      fonts:
+        - asset: assets/LeckerliOne-Regular.ttf
