--- a/store_data/pubspec.yaml
+++ b/store_data/pubspec.yaml
@@ -1,5 +1,5 @@
 name: store_data
-description: "A new Flutter project."
+description: 'A new Flutter project.'
 publish_to: 'none'
 version: 0.1.0
 
@@ -17,3 +17,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/
