--- a/store_data/pubspec.yaml
+++ b/store_data/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   intl: ^0.20.2
+  path_provider: ^2.1.5
   shared_preferences: ^2.5.3
 
 dev_dependencies:
