--- a/store_data/pubspec.yaml
+++ b/store_data/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_secure_storage: ^9.2.4
+  http: ^1.4.0
   intl: ^0.20.2
   path_provider: ^2.1.5
   shared_preferences: ^2.5.3
